--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ nbdist/
 /Chat/nbproject/private/
 /CipherApp/nbproject/private/
 /SHA-MD5/nbproject/private/
+/Restaurante/nbproject/private/
+/JAhorcado/nbproject/private/
+/URL_constructor/nbproject/private/
