ya baja chido las paginas, falta como cambiar entre ellas

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ nbdist/
 /Restaurante/nbproject/private/
 /JAhorcado/nbproject/private/
 /URL_constructor/nbproject/private/
+/proyecto/nbproject/private/
