--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ nbdist/
 /JAhorcado/nbproject/private/
 /URL_constructor/nbproject/private/
 /proyecto/nbproject/private/
+/proyecto
+/proyecto 2
+*.wav
